Fixed audio bug, locked screen orientation on ios, disabled keyboard scroll only on android.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -621,7 +621,11 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
     border-radius: 5px;
 
     ion-scroll {
-    	max-height: 38%;
+    	max-height: 190px;
+
+    	 @include mq(medium) {
+    		max-height: 240px;
+    	}
     }
 
     .rating-content {
